test/invalid-syntax/57163_records_dont_take_series_of_types/records_dont_take_series_of_types.mag
-- Author: 57163, Guilherme Dias

const val : {id1 : Int, id2 : (Int, Int, Int)} = {id1 = 10, id2 = 20}
